-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0 Alpha
-
None
-
Blackberry Z10, Software: 10.1.0.4181, Qt5.2.0 Alpha(built with NDK 10.1)
-
cf239f69e1873573da1d17d1eeed3266
Built, deployed and run the Media Player Example and had the following problem:
- video stream remains in the frontground when I open a new window(e.g. Color
Options)
| For Gerrit Dashboard: QTBUG-33816 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 69030,3 | QNX: Manage foreign mmrenderer windows | stable | qt/qtbase | Status: MERGED | +2 | 0 |