src/plugins/platforms/qnx/qqnxnativeinterface.cpp
@@ -42,6 +42,7 @@
 #include "qqnxnativeinterface.h"
 
 #include "qqnxscreen.h"
+#include "qqnxwindow.h"
 
 #include <QtGui/QScreen>
 #include <QtGui/QWindow>
@@ -68,6 +69,14 @@ void *QQnxNativeInterface::nativeResourceForScreen(const QByteArray &resource, Q
         return static_cast<QObject*>(static_cast<QQnxScreen*>(screen->handle()));
 
     return 0;
+}
+
+void QQnxNativeInterface::setWindowProperty(QPlatformWindow *window, const QString &name, const QVariant &value)
+{
+    if (name == QStringLiteral("mmRendererWindowName")) {
+        QQnxWindow *qnxWindow = static_cast<QQnxWindow*>(window);
+        qnxWindow->setMMRendererWindowName(value.toString());
+    }
 }
 
 QT_END_NAMESPACE
